--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.xiaomi.misearch</groupId>
-    <artifactId>aiservice-shared-search</artifactId>
+    <groupId>net.ald</groupId>
+    <artifactId>xa-search-frame</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -13,7 +13,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.9.0</version>
+            <version>2.10.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -42,12 +42,12 @@
             <repository>
                 <id>central</id>
                 <name>artifactory-releases</name>
-                <url>https://pkgs.d.xiaomi.net/artifactory/maven-release-virtual</url>
+                <url>https://pdx.net/artifactory/maven-release-virtual</url>
             </repository>
             <snapshotRepository>
                 <id>snapshots</id>
                 <name>artifactory-snapshots</name>
-                <url>https://pkgs.d.xiaomi.net/artifactory/maven-snapshot-virtual</url>
+                <url>https://pdx.net/artifactory/maven-snapshot-virtual</url>
             </snapshotRepository>
         </distributionManagement>
 </project>
